# poly-x-kalshi

./: .dockerignore  .gitignore  README.md  cloudbuild.gcp-scanner.yaml  pyproject.toml
.github/workflows/: ci-cd.yml
apps/: monitor_dashboard.py
config/: cross_sports_market_mappings.csv  fifa_market_mappings.csv
data/cross_sports_arbitrage/manual_review/approved_event_pairs/: current.csv
docker/: Dockerfile  Dockerfile.gcp-scanner
docs/: cloud_database_design.md  legacy_research.md
etl/: build_market_daily.py  create_validation_tables.py  fetch_markets.py  fetch_orderfilled.py  normalize_trades.py  run_job.py  submit_backfill.py
infra/: athena.tf  batch.tf  cloudwatch.tf  ecr.tf  glue.tf  iam.tf  main.tf  outputs.tf  s3.tf  secrets.tf  variables.tf
infra/gcp/: .terraform.lock.hcl  artifact_registry.tf  cloud_run.tf  cloud_sql.tf  iam.tf  main.tf  outputs.tf  scheduler.tf  services.tf  storage.tf  terraform.tfvars.example  variables.tf
infra/gcp/sql/: prediction_market_schema.sql
notebooks/: 01_prediction_market_data_profile.ipynb  02_polymarket_onchain_viability.ipynb  03_phase1_aws_historical_etl_model.ipynb  04_polymarket_bookmaker_arbitrage_feasibility.ipynb  05_cross_market_fifa_arbitrage_scanner.ipynb  06_poly_x_kalshi_architecture_design.ipynb
scripts/: deploy_gcp_scanner.sh
sql/: create_glue_tables.sql  data_quality_checks.sql  sample_queries.sql
src/prediction_market/: __init__.py  all_active_market_snapshot.py  all_open_event_match.py  arbitrage.py  cloud_daily_pipeline.py  cloud_db.py  collectors.py  dashboard.py  dashboard_data.py  fifa_arbitrage.py  market_pair_semantic_review.py  normalize.py  polymarket_onchain.py  review_store.py  storage.py  utils.py  viability_report.py
src/prediction_market/aws_etl/: __init__.py  athena_validation.py  batch_driver.py  cli.py  io.py  jobs.py  paths.py  schemas.py  transforms.py
tests/: test_all_active_market_snapshot.py  test_all_open_event_match.py  test_arbitrage.py  test_arbitrage_live.py  test_athena_validation.py  test_aws_etl.py  test_batch_driver.py  test_cloud_daily_pipeline.py  test_collectors.py  test_dashboard_data.py  test_fifa_arbitrage.py  test_fifa_arbitrage_live.py  test_live_smoke.py  test_normalize.py  test_polymarket_onchain.py  test_review_store.py  test_storage.py  test_viability_report.py
tests/fixtures/: oddsportal_sample.html
