[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prediction-market-data-profile"
version = "0.1.0"
description = "Notebook-first local profile of Polymarket and Kalshi prediction market data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "boto3>=1.34",
  "duckdb>=1.0",
  "httpx>=0.27",
  "ipykernel>=6.29",
  "pandas>=2.1",
  "playwright>=1.45",
  "polars>=1.0",
  "pyarrow>=15.0",
  "rapidfuzz>=3.9",
]

[project.optional-dependencies]
dev = [
  "notebook>=7.0",
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
prediction-market-etl = "prediction_market.aws_etl.cli:main"
prediction-market-backfill = "prediction_market.aws_etl.batch_driver:main"
prediction-market-athena-validation = "prediction_market.aws_etl.athena_validation:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
