[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poly-x-kalshi"
version = "0.1.0"
description = "Research-only cross-market FIFA prediction arbitrage scanner for Polymarket and Kalshi."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "boto3>=1.34",
  "duckdb>=1.0",
  "httpx>=0.27",
  "ipykernel>=6.29",
  "pandas>=2.1",
  "playwright>=1.45",
  "polars>=1.0",
  "pyarrow>=15.0",
  "rapidfuzz>=3.9",
]

[project.optional-dependencies]
dev = [
  "notebook>=7.0",
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
prediction-market-etl = "prediction_market.aws_etl.cli:main"
prediction-market-backfill = "prediction_market.aws_etl.batch_driver:main"
prediction-market-athena-validation = "prediction_market.aws_etl.athena_validation:main"
poly-x-kalshi-fifa-snapshot = "prediction_market.fifa_arbitrage:snapshot_cli_main"
poly-x-kalshi-fifa-watch = "prediction_market.fifa_arbitrage:watch_cli_main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
